--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>3.2.5</version>
 		</dependency>
 
