added: Application and Database Metadata

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=Abhiram_Deshpande_CashRich_Assignment
+server.port=8081
+spring.security.user.name=abhiram
+spring.security.user.password=abhiram123
+api.secret=I_LOVE_CASH_RICH@2024
+
+#MySQL database configuration
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cashrich_assignment
+spring.datasource.username=root
+spring.datasource.password=Machine@123
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
